--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "Yauhen Davidovich portfolio",
+  "name": "Yauhen-Davidovich-portfolio",
+  "homepage": "https://yauhendavidovich.github.io/Portfolio/",
   "private": true,
   "description": "Front-end developer",
   "version": "0.1.0",
@@ -15,6 +16,7 @@
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -37,7 +39,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "repository": {
     "type": "git",
